demo-crud/src/main/kotlin/com/example/democrud/error/exception/BaseException.kt
package com.example.democrud.error.exception

import com.example.democrud.error.message.ErrorCode

class BaseException(errorCode: ErrorCode): RuntimeException() {
    public val errorCode: ErrorCode = errorCode
}